Ajout correctif overflow-wrap sur affichage des messages

--- a/src/components/ConversWindow.css
+++ b/src/components/ConversWindow.css
@@ -16,6 +16,8 @@
 
 .apiMessage{
     font-size: 16px;
+    overflow-wrap: break-word;
+    max-width: 100%;
 }
 
 .apiUsername{
